# Note_redactor

./: CMakeLists.txt  DEVELOPER_GUIDE.md  README.md  USER_GUIDE.md
resources/: symbols.qrc
src/: MainWindow.cpp  MainWindow.h
src/audio/: AudioRecorder.cpp  AudioRecorder.h  PitchDetector.cpp  PitchDetector.h
src/common/: ToolType.h
src/model/: BarLine.h  Dot.h  GlyphSymbol.h  MusicSymbol.h  Note.cpp  Note.h  Score.cpp  Score.h  TimeSignature.h
src/view/: StaffWidget.cpp  StaffWidget.h  SymbolPaletteWidget.cpp  SymbolPaletteWidget.h
